# test_git

./: .gitignore  2.txt  CusomRunner.Dockerfile  CustomRunner.Dockerfile  Dockerfile  Makefile  pod-cache-server-69cd6796c8-stffm.yaml  pyproject.toml  t.sh  test.py  values.yaml  version.sh
.github/workflows/: always-save.yml  cache.yml  docker.yml  make.yml  poetry.yaml  test.yml
cache/: cache-data-persistentvolumeclaim.yaml  cache-server-deployment.yaml  cache-server-service.yaml  docker-compose.cache.yml
