[tool.poetry]
name = "test-git"
version = "0.1.0"
description = ""
authors = ["kustkust <ekater.kust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
